kubernetes/main/apps/ingress-nginx-internal/ingress-nginx-internal-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: valetudo-service
  namespace: ingress-nginx-internal
spec:
  externalName: U02293ZM.off.drik.it
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ExternalName

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-internal
    kubernetes.io/tls-acme: 'true'
  labels:
    app.kubernetes.io/name: valetudo
  name: valetudo-ingress
  namespace: ingress-nginx-internal
spec:
  ingressClassName: nginx-internal
  rules:
  - host: valetudo.drik.it
    http:
      paths:
      - backend:
          service:
            name: valetudo-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - valetudo.drik.it
    secretName: valetudo-certs
